lib/HTTP-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plan-route
  namespace: plan-prod
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy-common
  hostnames:
    - "plan.simonbrundin.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: plan-service
          port: 80
          weight: 1
          namespace: plan-prod
      matches:
        - path:
            type: PathPrefix
            value: /
